biocbook: migrate Rmd to qmd and fix xrefs

--- a/inst/pages/01_intro.qmd
+++ b/inst/pages/01_intro.qmd
@@ -1,6 +1,4 @@
-# (PART) Introduction {-}
-
-# Introduction {#intro}
+# Preamble {-}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -28,7 +26,7 @@ across application domains.
 
 We assume that the reader is already familiar with R programming. For
 references and tips on introductory material for R and Bioconductor,
-see Chapter \@ref(resources). This online resource and its associated
+see [@sec-resources]. This online resource and its associated
 ecosystem of microbiome data science tools are a result of a
 community-driven development process, and welcoming new users and
 contributors. You can find more information on how to find us online
