--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -1,25 +1,22 @@
-# Microbiome Data {#containers}
-
+# Microbiome Data {#sec-containers}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
 chapterPreamble()
 ```
 
-
 ## Data science framework
 
 The building blocks of the framework are **data container**
 (SummarizedExperiment and its derivatives), **packages** from various
 developers using the TreeSE container, open **demonstration data
-sets**, in a separate chapter \@ref(example-data), and **online
+sets**, in a separate chapter [@sec-example-data], and **online
 tutorials** including this online book as well as the various package
 vignettes and other materials.
 
 ```{r echo=FALSE}
-knitr::include_graphics("general/figures/FigureOverviewV2_mod.png")
+knitr::include_graphics("images/FigureOverviewV2_mod.png")
 ```
-
 
 ## Data containers
 
@@ -55,10 +52,9 @@ transformation or agglomeration. We start by providing recommendations
 on how to represent different varieties of multi-table data within the
 `TreeSummarizedExperiment` class.
 
-The options and recommendations are summarized in Table \@ref(tab:options).
+The options and recommendations are summarized in [@tbl-options].
 
-
-### Assay data {#assay-slot}
+### Assay data {#sec-assay-slot}
 
 The original count-based taxonomic abundance tables may have different 
 transformations, such as logarithmic, Centered Log-Ratio (CLR), or relative 
@@ -99,11 +95,8 @@ Now there are two assays available in the `tse` object, `counts` and
 assay(tse, "relabundance")[1:5,1:7]
 ```
 
-
 Here the dimension of the count data remains unchanged in
 transformation. This is in fact, a requirement for the assays.
-
-
 
 ### colData
 
@@ -112,8 +105,6 @@ transformation. This is in fact, a requirement for the assays.
 ```{r coldata}
 colData(tse)
 ```
-
-
 
 ### rowData
 
@@ -146,9 +137,7 @@ features, but this is not a must-have. This means there can be features, which
 are not linked to nodes, and nodes, which are not linked to features. To change
 the links in an existing object, the `changeTree` function is available.
 
-
-
-### Alternative experiments {#alt-exp}
+### Alternative experiments {#sec-alt-exp}
 
 _**Alternative experiments**_ complement _assays_. They can contain
 complementary data, which is no longer tied to the same dimensions as
@@ -176,14 +165,12 @@ the samples match.
 Let us first agglomerate the data to Phylum level. This yields a new
 TreeSE data object.
 
-
 ```{r altexp_agglomerate}
 tse_phylum <- mergeFeaturesByRank(tse, "Phylum", na.rm=TRUE)
 # Both have the same number of columns (samples)
 dim(tse)
 dim(tse_phylum)
 ```
-
 
 Then we can add the new phylum-level data object as an alternative experiment in the original data.
 
@@ -204,9 +191,7 @@ dim(altExp(tse[,1:10],"Phylum"))
 
 For more details on _altExp_, you can check the [introduction](https://bioconductor.org/packages/release/bioc/vignettes/SingleCellExperiment/inst/doc/intro.html) to the `SingleCellExperiment` package [@R_SingleCellExperiment].
 
-
-
-### MultiAssayExperiments {#mae}
+### MultiAssayExperiments {#sec-mae}
 
 _**Multiple experiments**_ relate to complementary measurement types,
 such as transcriptomic or metabolomic profiling of the microbiome or
@@ -221,7 +206,6 @@ samples are defined through a `sampleMap`. Each element on the
 `experimentsList` of an `MultiAssayExperiment` is `matrix` or
 `matrix`-like objects, including `SummarizedExperiment` objects, and 
 the number of samples can differ between the elements.
-
 
 <!--
 ```{r}
@@ -238,22 +222,16 @@ For information have a look at the [intro vignette](https://bioconductor.org/pac
    altExp             free              match    Alternative experiments  
 MultiAssay            free      free (mapping)    Multi-omic experiments    
 
-Table: (\#tab:options) **Recommended options for storing multiple data tables in microbiome studies** The _assays_ are best suited for data transformations (one-to-one match between samples and columns across the assays). The _alternative experiments_ are particularly suitable for alternative versions of the data that are of same type but may have a different number of features (e.g. taxonomic groups); this is for instance the case with taxonomic abundance tables agglomerated at different levels (e.g. genus vs. phyla) or alternative profiling technologies (e.g. amplicon sequencing vs. shallow shotgun metagenomics). For alternative experiments one-to-one match between samples (cols) is libraryd but the alternative experiment tables can have different numbers of features (rows). Finally, elements of the _MultiAssayExperiment_ provide the most flexible way to incorporate multi-omic data tables with flexible numbers of samples and features. We recommend these conventions as the basis for methods development and application in microbiome studies.
+: **Recommended options for storing multiple data tables in microbiome studies** The _assays_ are best suited for data transformations (one-to-one match between samples and columns across the assays). The _alternative experiments_ are particularly suitable for alternative versions of the data that are of same type but may have a different number of features (e.g. taxonomic groups); this is for instance the case with taxonomic abundance tables agglomerated at different levels (e.g. genus vs. phyla) or alternative profiling technologies (e.g. amplicon sequencing vs. shallow shotgun metagenomics). For alternative experiments one-to-one match between samples (cols) is libraryd but the alternative experiment tables can have different numbers of features (rows). Finally, elements of the _MultiAssayExperiment_ provide the most flexible way to incorporate multi-omic data tables with flexible numbers of samples and features. We recommend these conventions as the basis for methods development and application in microbiome studies. {#tbl-options}
 
-
-
-
-## Demonstration data {#example-data}
+## Demonstration data {#sec-example-data}
 
 Open demonstration data for testing and benchmarking purposes is
 available from multiple locations. This chapter introduces some
 options. The other chapters of this book provide ample examples about
 the use of the data.
 
-
-
-
-### Package data {#package-data}
+### Package data {#sec-package-data}
 
 The `mia` R package contains example datasets that are direct
 conversions from the alternative `phyloseq` container to the
@@ -263,8 +241,7 @@ List the [available
 datasets](https://microbiome.github.io/mia/reference/mia-datasets.html) in
 the `mia` package:
 
-
-```{r, message=FALSE, eval=FALSE}
+```{r, message=FALSE}
 library(mia)
 data(package="mia")
 ```
@@ -276,21 +253,20 @@ data("GlobalPatterns", package="mia")
 GlobalPatterns
 ```
 
-#### Tengeler2020 {#tengeler-desc}
+#### Tengeler2020 {#sec-tengeler-desc}
 
 Tengeler2020 is derived from a randomised blinded study on the effects of gut
 microbiome on attention-deficit/hyperactivity disorder (ADHD) in humanised mice
 [@Tengeler2020]. The dataset is briefly presented in
 [these slides](https://microbiome.github.io/outreach/tengeler2020_presentation.html).
 
-#### HintikkaXOData {#hintikka-desc}
+#### HintikkaXOData {#sec-hintikka-desc}
 
 [HintikkaXOData](https://microbiome.github.io/microbiomeDataSets/reference/HintikkaXOData.html)
 is derived from a study about the effects of fat diet and prebiotics on the
 microbiome of rat models [@Hintikka2021]. It is available in the MAE data
 container for R. The dataset is briefly summarized in
 [these slides](https://microbiome.github.io/outreach/hintikkaxo_presentation.html).
-
 
 ### ExperimentHub data
 
@@ -324,10 +300,7 @@ mae <- HintikkaXOData
 Data is available in `r Biocpkg("SummarizedExperiment")`, `r
 Biocpkg("TreeSummarizedExperiment")` and `r
 Biocpkg("MultiAssayExperiment")` data containers; see the separate
-page on [alternative
-containers](https://microbiome.github.io/OMA/multitable.html) for more
-details.
-
+page on [alternative containers](23_multi-assay_analyses.qmd) for more details.
 
 ### Curated metagenomic data
 
@@ -347,8 +320,6 @@ library(curatedMetagenomicData)
 tse <- curatedMetagenomicData("Vatanen*", dryrun = FALSE, counts = TRUE)
 ```
 
-
-
 ### Other data sources
 
 The current collections provide access to vast microbiome data
@@ -357,8 +328,7 @@ resources. The output has to be converted into TreeSE/MAE separately.
 - [MGnifyR](https://github.com/beadyallen/MGnifyR) provides access to [EBI/MGnify](https://www.ebi.ac.uk/metagenomics/) 
 - [qiitr](https://github.com/cran/qiitr) provides access to [QIITA](https://qiita.com/about) 
 
-
-## Loading experimental microbiome data
+## Loading experimental microbiome data {#sec-loading-experimental-microbiome-data}
 
 ### 16S workflow
 
@@ -378,8 +348,8 @@ You can find full workflow script without further explanations and comments from
 
 ```{r dada2_1, include=FALSE}
 # Load objects
-seqtab.nochim <- readRDS("data/dada2_seqtab.nochim")
-taxa <- readRDS("data/dada2_taxa")
+seqtab.nochim <- readRDS(system.file("extdata", "dada2_seqtab.nochim", package = "OMA"))
+taxa <- readRDS(system.file("extdata", "dada2_taxa", package = "OMA"))
 ```
 
 Load required packages.
@@ -440,9 +410,7 @@ rownames(tse) <- paste0("ASV", seq( nrow(tse) ))
 tse
 ```
 
-
-
-### Import from external files {#import-from-file}
+### Import from external files {#sec-import-from-file}
 
 Microbiome (taxonomic) profiling data is commonly distributed in
 various file formats. You can import such external data files as a
@@ -451,7 +419,6 @@ format. Here, we provide examples for common formats. Some datasets and raw
 files to learn how to import raw data and construct TreeSE/MAE containers are
 available in the
 [microbiome data repository](https://github.com/microbiome/data).
-
 
 #### CSV import
 
@@ -485,9 +452,9 @@ arbitrary; we refer here to the same names as in the examples:
 After you have set up the CSV files, you can read them in R:
 
 ```{r importingcsv1, message=FALSE}
-count_file  <- "data/assay_taxa.csv"
-tax_file    <- "data/rowdata_taxa.csv"
-sample_file <- "data/coldata.csv"
+count_file  <- system.file("extdata", "assay_taxa.csv", package = "OMA")
+tax_file    <- system.file("extdata", "rowdata_taxa.csv", package = "OMA")
+sample_file <- system.file("extdata", "coldata.csv", package = "OMA")
 
 # Load files
 counts  <- read.csv(count_file, row.names=1)   # Abundance table (e.g. ASV data; to assay data)
@@ -533,7 +500,6 @@ There are many different source files and many different ways to read
 data in R. One can do data manipulation in R as well. Investigate the
 entries as follows.
 
-
 ```{r demodata, message=FALSE}
 # coldata rownames match assay colnames
 all(rownames(samples) == colnames(counts)) # our dataset
@@ -547,7 +513,6 @@ class(tax) # should be data.frame or DataFrame
 class(counts) # should be a numeric matrix
 ```
 
-
 ### Constructing TreeSummarizedExperiment
 
 Now let us create the TreeSE object from the input data tables. Here
@@ -560,7 +525,6 @@ we also convert the data objects in their preferred formats:
 The `SimpleList` could be used to include multiple alternative assays, if
 necessary.
 
-
 ```{r importingcsv3}
 # Create a TreeSE
 tse_taxa <- TreeSummarizedExperiment(assays =  SimpleList(counts = counts),
@@ -572,15 +536,14 @@ tse_taxa
 
 Now you should have a ready-made TreeSE data object that can be used in downstream analyses.
 
-
 ### Constructing MultiAssayExperiment
 
 To construct a _MultiAssayExperiment_ object, just combine multiple _TreeSE_ data containers. 
 Here we import metabolite data from the same study.
 
 ```{r importingcsv4, message=FALSE}
-count_file <- "data/assay_metabolites.csv"
-sample_file <- "data/coldata.csv"
+count_file <- system.file("extdata", "assay_metabolites.csv", package = "OMA")
+sample_file <- system.file("extdata", "coldata.csv", package = "OMA")
 
 # Load files
 counts  <- read.csv(count_file, row.names=1)  
@@ -606,8 +569,6 @@ mae <- MultiAssayExperiment(experiments = experiments)
 mae
 ```
 
-
-
 ### Import functions for standard formats
 
 Specific import functions are provided for:
@@ -616,11 +577,10 @@ Specific import functions are provided for:
 -   QIIME2 files (see `help(mia::loadFromQIIME2)`)
 -   Mothur files (see `help(mia::loadFromMothur)`)
 
-
 #### Biom import
 
 Here we show how [Biom files](https://biom-format.org/) are imported into
-a TreeSE object using as an example Tengeler2020, which is further described in section \@ref(tengeler-desc). This dataset consists of 3 files, which can be
+a TreeSE object using as an example Tengeler2020, which is further described in section [@sec-tengeler-desc]. This dataset consists of 3 files, which can be
 fetched or downloaded from
 [this repository](https://github.com/microbiome/data/tree/main/Tengeler2020):
 
@@ -632,9 +592,9 @@ To begin with, we store the data in a local directory within the working
 directory, such as _data/_, and define the source file paths.
 
 ```{r}
-biom_file_path <- "data/Aggregated_humanization2.biom"
-sample_meta_file_path <- "data/Mapping_file_ADHD_aggregated.csv"
-tree_file_path <- "data/Data_humanization_phylo_aggregation.tre"
+biom_file_path <- system.file("extdata", "Aggregated_humanization2.biom", package = "OMA")
+sample_meta_file_path <- system.file("extdata", "Mapping_file_ADHD_aggregated.csv", package = "OMA")
+tree_file_path <- system.file("extdata", "Data_humanization_phylo_aggregation.tre", package = "OMA")
 ```  
 
 Now we can read in the biom file and convert it into a TreeSE object. In addition, we retrieve the rank names from the prefixes of the feature names and then remove them with the `rankFromPrefix` and `removeTaxaPrefixes` optional arguments.
@@ -729,7 +689,6 @@ Now the rowTree slot contains the phylogenetic tree:
 head(rowTree(tse))
 ```
 
-
 ### Conversions between data formats in R
 
 If the data has already been imported in R in another format, it
@@ -766,12 +725,9 @@ GlobalPatterns_phyloseq2 <- makePhyloseqFromTreeSummarizedExperiment(GlobalPatte
 GlobalPatterns_phyloseq2
 ```
 
-
 Conversion is possible between other data formats. Interested readers can refer to the following functions:
-* [makeTreeSummarizedExperimentFromDADA2](https://microbiome.github.io/mia/reference/makeTreeSummarizedExperimentFromDADA2.html)
-* [makeSummarizedExperimentFromBiom](https://microbiome.github.io/mia/reference/makeSummarizedExperimentFromBiom.html)
-* [loadFromMetaphlan](https://microbiome.github.io/mia/reference/loadFromMetaphlan.html)
+
+* [makeTreeSummarizedExperimentFromDADA2](https://microbiome.github.io/mia/reference/makeTreeSummarizedExperimentFromDADA2.html)  
+* [makeSummarizedExperimentFromBiom](https://microbiome.github.io/mia/reference/makeSummarizedExperimentFromBiom.html)  
+* [loadFromMetaphlan](https://microbiome.github.io/mia/reference/loadFromMetaphlan.html)  
 * [readQZA](https://microbiome.github.io/mia/reference/loadFromQIIME2.html)
-
-
-
