--- a/inst/pages/10_manipulation.qmd
+++ b/inst/pages/10_manipulation.qmd
@@ -1,13 +1,9 @@
-# (PART) Focus Topics {-}
-
-
-# Data Manipulation {#datamanipulation}
+# Data Manipulation {#sec-datamanipulation}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
 chapterPreamble()
 ```
-
 
 ## Tidying and subsetting
 
@@ -16,8 +12,6 @@ chapterPreamble()
 For several custom analysis and visualization packages, such as those from
 `tidyverse`, the `SE` data can be converted to a long data.frame format with 
 `meltAssay`.    
-
-
 
 ```{r}
 library(mia)
@@ -73,10 +67,12 @@ First, we would like to see all the possible values that `SampleType` can take o
 # Inspect possible values for SampleType
 unique(tse$SampleType)
 ```
+
 ```{r eval = FALSE}
 # Show the frequency of each value
 tse$SampleType %>% table()
 ```
+
 ```{r echo = FALSE}
 # Show the frequency of each value
 tse$SampleType %>% table() %>% kable() %>%
@@ -129,10 +125,12 @@ As previously, we would first like to see all the possible values that
 # Inspect possible values for phylum
 unique(rowData(tse)$Phylum)
 ```
+
 ```{r eval = FALSE}
 # Show the frequency of each value
 rowData(tse)$Phylum %>% table()
 ```
+
 ```{r echo = FALSE}
 # Show te frequency of each value
 rowData(tse)$Phylum %>% table() %>% kable() %>%
@@ -322,6 +320,7 @@ colData(tse)$Description <- paste(colData(tse)$Description, "modified descriptio
 # view modified variable
 head(tse$Description)
 ```
+
 New information can also be added to the experiment by creating a new variable.
 
 ```{r add-coldata}
@@ -366,5 +365,6 @@ tse
 ```
 
 ### Additional functions
-* [mapTaxonomy](https://microbiome.github.io/mia/reference/taxonomy-methods.html)
-* [mergeFeatures/mergeSamples](https://microbiome.github.io/mia/reference/merge-methods.html)
+
+* [mapTaxonomy](https://microbiome.github.io/mia/reference/taxonomy-methods.html)  
+* [mergeFeatures/mergeSamples](https://microbiome.github.io/mia/reference/merge-methods.html)  
