--- a/inst/pages/11_taxonomic_information.qmd
+++ b/inst/pages/11_taxonomic_information.qmd
@@ -1,4 +1,4 @@
-# Taxonomic Information {#taxonomic-information}
+# Taxonomic Information {#sec-taxonomic-information}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -118,7 +118,7 @@ specified taxonomic rank.
 head(getUniqueFeatures(tse, rank = "Phylum"))
 ```
 
-### Generate a taxonomic tree on the fly {#fly-tree}
+### Generate a taxonomic tree on the fly {#sec-fly-tree}
 
 To create a taxonomic tree, `taxonomyTree` used the information and returns a
 `phylo` object. Duplicate information from the `rowData` is removed.
@@ -135,7 +135,7 @@ tse
 The implementation is based on the `toTree` function from the
 `TreeSummarizedExperiment` package [@R_TreeSummarizedExperiment].
 
-## Data agglomeration {#data-agglomeration}
+## Data agglomeration {#sec-data-agglomeration}
 
 One of the main applications of taxonomic information in regards to count data
 is to agglomerate count data on taxonomic levels and track the influence of 
@@ -190,7 +190,7 @@ assay(altExp(tse, "Species_byPrevalence"), "relabundance")[88:92, 1:7]
 tseGlobalPatterns <- tse
 ```
 
-### Taxa clustering {#taxa-clustering}
+### Taxa clustering {#sec-taxa-clustering}
 Another way to agglomerate the data is to cluster the taxa. To do so,
 we usually start by doing a compositionality aware transformation such as CLR, 
 followed by the application of a standard clustering method.
@@ -277,7 +277,7 @@ tse_merged
 We can note that it worked as planned since there were 5 clusters and there are
 now 5 rows.
 
-## Data transformation {#assay-transform}
+## Data transformation {#sec-assay-transform}
 
 Data transformations are common in microbiome analysis. Examples
 include the logarithmic transformation, calculation of relative
@@ -314,4 +314,3 @@ head(assay(tse, "pa"))
 # list of abundance tables that assays slot contains
 assays(tse)
 ```
-
