--- a/inst/pages/12_quality_control.qmd
+++ b/inst/pages/12_quality_control.qmd
@@ -1,5 +1,4 @@
-# Exploration and Quality Control {#quality-control}
-
+# Exploration and Quality Control {#sec-quality-control}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -17,11 +16,9 @@ biases, unexpected patterns and so forth. Standard summaries and
 visualizations can help, and the rest comes with experience. The
 exploration and quality control can be iterative processes.
 
-
 ```{r, message=FALSE}
 library(mia)
 ```
-
 
 ## Abundance
 
@@ -62,8 +59,6 @@ plotAbundanceDensity(tse, layout = "density", assay.type = "relabundance",
     scale_x_log10()
 ```
 
-
-
 ## Prevalence
 
 Prevalence quantifies the frequency of samples where certain microbes
@@ -96,7 +91,6 @@ head(getPrevalence(tse, detection = 1, sort = TRUE, assay.type = "counts",
 If the output should be used for subsetting or storing the data in the
 `rowData`, set `sort = FALSE`.
 
-
 ### Prevalence analysis
 
 To investigate microbiome prevalence at a selected taxonomic level, two 
@@ -113,7 +107,6 @@ altExp(tse,"Phylum") <- mergeFeaturesByRank(tse, "Phylum")
 head(getPrevalence(altExp(tse,"Phylum"), detection = 1/100, sort = TRUE,
                    assay.type = "counts", as_relative = TRUE))
 ```
-
 
 Alternatively, the `rank` argument could be set to perform the
 agglomeration on the fly.
@@ -142,17 +135,14 @@ Note that the `detection` and `prevalence` thresholds are not the same, since
 `detection` can be applied to relative counts or absolute counts depending on 
 whether `as_relative` is set `TRUE` or `FALSE`
 
-
 The function ‘getPrevalentAbundance’ can be used to check the total
 relative abundance of the prevalent taxa (between 0 and 1).
-
 
 ### Rare taxa
 
 Related functions are available for the analysis of rare taxa
 (`rareMembers`; `rareAbundance`; `lowAbundance`, `getRareFeatures`,
 `subsetByRareFeatures`).
-
 
 ### Plotting prevalence
 
@@ -218,7 +208,7 @@ plotRowTree(x[rowData(x)$Phylum %in% top_phyla_mean,],
             node_colour_by = "prevalence")
 ```
 
-## Quality control {#qc}
+## Quality control {#sec-qc}
 
 Next, let us load the `GlobalPatterns` dataset to illustrate standard
 microbiome data summaries.
@@ -228,7 +218,6 @@ library(mia)
 data("GlobalPatterns", package="mia")
 tse <- GlobalPatterns 
 ```
-
 
 ### Top taxa  
 
@@ -241,7 +230,6 @@ top_features <- getTopFeatures(tse, method="median", top=10)
 # Check the information for these
 rowData(tse)[top_features, taxonomyRanks(tse)]
 ```
-
 
 ### Library size / read count  
 
@@ -318,7 +306,6 @@ In addition, data can be rarefied with
 which normalises the samples to an equal number of reads. However,
 this practice has been discouraged for the analysis of differentially
 abundant microorganisms (see [@mcmurdie2014waste]).
-  
 
 ### Contaminant sequences
 
@@ -326,10 +313,10 @@ Samples might be contaminated with exogenous sequences. The impact of
 each contaminant can be estimated based on their frequencies and
 concentrations across the samples.
 
-The following [decontam
-functions](https://microbiome.github.io/mia/reference/isContaminant.html)
+The following 
+[decontam functions](https://microbiome.github.io/mia/reference/isContaminant.html)
 are based on the [@davis2018simple] and support such functionality:
 
-* `isContaminant`, `isNotContaminant`
-* `addContaminantQC`, `addNotContaminantQC`
+* `isContaminant`, `isNotContaminant`  
+* `addContaminantQC`, `addNotContaminantQC`  
 
