--- a/inst/pages/14_alpha_diversity.qmd
+++ b/inst/pages/14_alpha_diversity.qmd
@@ -1,10 +1,9 @@
-# Community Diversity {#community-diversity}
+# Community Diversity {#sec-community-diversity}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
 chapterPreamble()
 ```
-
 
 Diversity estimates are a central topic in microbiome data analysis. 
 
@@ -21,7 +20,6 @@ library(mia)
 data("GlobalPatterns", package="mia")
 tse <- GlobalPatterns
 ```
-
 
 **_Alpha diversity_**, also sometimes interchangeably used with the
 term **_species diversity_**, summarizes the distribution of species
@@ -70,8 +68,7 @@ Alpha diversity can be estimated with wrapper functions that interact
 with other packages implementing the calculation, such as _`vegan`_
 [@R_vegan].
 
-
-### Richness {#richness}
+### Richness {#sec-richness}
 
 Richness gives the number of features present within a community and can be calculated with `estimateRichness`. Each of the estimate diversity/richness/evenness/dominance functions adds the calculated measure(s) to the `colData` of the `SummarizedExperiment` under the given column `name`. Here, we calculate `observed` features as a measure of richness.     
 
@@ -83,6 +80,7 @@ tse <- mia::estimateRichness(tse,
 
 head(tse$observed)
 ```
+
 This allows access to the values to be analyzed directly from the `colData`, for example
 by plotting them using `plotColData` from the _`scater`_ package [@R_scater].
 
@@ -97,7 +95,7 @@ plotColData(tse,
 
 ```
 
-### Diversity {#estimate-diversity}  
+### Diversity {#sec-estimate-diversity}  
 
 The main function, `estimateDiversity`, calculates the selected
 diversity index based on the selected assay data.  
@@ -144,7 +142,7 @@ ggplot(df, aes(x = SampleType, y = shannon)) +
   theme(text = element_text(size = 10))
 ```
 
-### Faith phylogenetic diversity {#faith-diversity}
+### Faith phylogenetic diversity {#sec-faith-diversity}
 
 The Faith index is returned by the function `estimateFaith`.
 
@@ -189,7 +187,6 @@ tse <- estimateEvenness(tse,
 head(tse$simpson)
 ```
 
-
 ### Dominance  
 
 Dominance can be calculated with `estimateDominance`. Here, the `Relative index` is calculated which is the relative abundance of the most dominant species in the sample.   
@@ -225,7 +222,6 @@ tse <- mia::estimateDivergence(tse,
                                reference = "median",
                                FUN = vegan::vegdist)
 ```
-
 
 ## Visualization
 
