--- a/inst/pages/19_visualization_techniques.qmd
+++ b/inst/pages/19_visualization_techniques.qmd
@@ -1,4 +1,4 @@
-# Visualization {#viz-chapter}
+# Visualization {#sec-viz-chapter}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -102,12 +102,12 @@ ggplot(coldata, aes(x = SampleType)) +
        y = "Number of Samples")
 ```
 
-Further methods of application can be found in the chapters \@ref(qc)
-and \@ref(richness) and in a few [external
+Further methods of application can be found in the chapters [@sec-qc]
+and [@sec-richness] and in a few [external
 tutorials](https://github.com/davismcc/scater_tutorials_open_data)
 with open data. Additionally, `rowData` and `colData` allow
 manipulation and subsetting of large data sets into smaller units, as
-explained in chapter \@ref(datamanipulation).
+explained in chapter [@sec-datamanipulation].
 
 ### Viewing abundance and prevalence patterns
 
@@ -119,17 +119,17 @@ respectively, with the _miaViz_ package.
 
 Specifically, the functions `plotAbundance`, `plotAbundanceDensity`
 and `plotRowTree` are used, and examples on their usage are discussed
-throughout chapter \@ref(quality-control).
+throughout chapter [@sec-quality-control].
 
 ## Diversity estimation
 
 Alpha diversity is commonly measured as one of the diversity indices
-explained in chapter \@ref(community-diversity). Because the focus
+explained in chapter [@sec-community-diversity]. Because the focus
 lies on each sample separately, one-dimensional plots, such as
 **scatter**, **violin** and **box plots**, are suitable.
 
 Beta diversity is generally evaluated as one of the dissimilarity
-indices reported in chapter \@ref(community-similarity). Unlike alpha
+indices reported in chapter [@sec-community-similarity]. Unlike alpha
 diversity, samples are compared collectively to estimate the
 heterogeneity across them, therefore multidimensional plots, such as
 **Shepard** and **ordination plots** are suitable.
@@ -185,11 +185,11 @@ plots[[1]] + plots[[2]]
 ```
 
 The analogous output in the form of a violin plot is obtained in
-chapter \@ref(faith-diversity). In addition, box plots that group
+chapter [@sec-faith-diversity]. In addition, box plots that group
 samples according to certain information, such as origin, sex, age and
 health condition, can be labeled with p-values for significant
 differences with the package _ggsignif_ package, as shown in chapter
-\@ref(estimate-diversity).
+[@sec-estimate-diversity].
 
 ### Beta diversity with Shepard and coordination plots
 
@@ -206,7 +206,7 @@ following coordination methods:
 
 Since these clustering techniques allow for multiple coordinates or
 components, **coordination plots** can also span multiple dimensions,
-which is explained in chapter \@ref(extras).
+which is explained in chapter [@sec-extras].
 
 ```{r}
 # perform NMDS coordination method
@@ -251,7 +251,7 @@ plots[[1]] + plots[[2]] +
 ```
 
 For similar examples, readers are referred to chapter
-\@ref(community-similarity).  Further material on the graphic
+[@sec-community-similarity].  Further material on the graphic
 capabilities of _patchwork_ is available in its [official package
 tutorial](https://patchwork.data-imaginist.com/articles/patchwork.html).
 
@@ -259,7 +259,7 @@ tutorial](https://patchwork.data-imaginist.com/articles/patchwork.html).
 
 ### Heatmaps
 
-As described in chapter \@ref(visual-composition), bar plots and
+As described in chapter [@sec-visual-composition], bar plots and
 heatmaps can offer a useful insight into the composition of a
 community. Simple methods involve the functions `plotAbundance` and
 `geom_tile` in combination with `scale_fill_gradientn` from the
@@ -663,6 +663,6 @@ plot
 
 Heatmaps find several other applications in biclustering and
 multi-assay analyses. These are discussed further in chapters
-\@ref(clustering) and \@ref(multi-assay-analyses).
+[@sec-clustering] and [@sec-multi-assay-analyses].
 
 
