--- a/inst/pages/20_beta_diversity.qmd
+++ b/inst/pages/20_beta_diversity.qmd
@@ -1,3 +1,5 @@
+# Community Similarity {#sec-community-similarity}
+
 ```{r setup, echo = FALSE, results = "asis"}
 library(rebook)
 chapterPreamble()
@@ -13,8 +15,6 @@ knitr::opts_chunk$set(
   dev.args = list(type = "cairo-png")
 )
 ```
-
-# Community Similarity {#community-similarity}
 
 Beta diversity quantifies the dissimilarity between communities (multiple
 samples), as opposed to alpha diversity which focuses on variation within a
@@ -58,8 +58,7 @@ Reduction (UMAP), whereas the latter is mainly represented by distance-based
 Redundancy Analysis (dbRDA). We will first discuss unsupervised ordination
 methods and then proceed to supervised ones.
 
-
-## Unsupervised ordination {#unsupervised-ordination}
+## Unsupervised ordination {#sec-unsupervised-ordination}
 
 Unsupervised ordination methods variation in the data without additional
 information on covariates or other supervision of the model. Among the different
@@ -206,7 +205,7 @@ plotReducedDim(tse, "Unifrac",
                colour_by = "Group")
 ```
 
-### Other ordination methods {#other-ord-methods}
+### Other ordination methods {#sec-other-ord-methods}
 
 Other dimension reduction methods, such as PCA and UMAP, are inherited from the
 scater package.
@@ -382,7 +381,7 @@ approach complements the previous results of PERMANOVA.
 
 ## Case studies
 
-#### Visualizing the most dominant genus on PCoA {#pcoa-genus}
+#### Visualizing the most dominant genus on PCoA {#sec-pcoa-genus}
 
 In this section, we visualize the most dominant genus on PCoA. A similar
 visualization was proposed by [-@Salosensaari2021]. First, we agglomerate the
@@ -416,7 +415,7 @@ tse_genus <- runMDS(tse_genus,
 ```
 
 Finally, we get the top taxa and and visualize their abundances on PCoA. Note
-that A 3D interactive version of the plot below can be found in \@ref(extras).
+that A 3D interactive version of the plot below can be found in [@sec-extras].
 
 ```{r}
 # Getting the top taxa
@@ -481,7 +480,7 @@ plotReducedDim(tse_genus[ , colData(tse_genus)$Group == FALSE], "PCoA_BC",
        title = "Group = FALSE", color = "")
 ```
 
-### Testing differences in community composition between sample groups {#dbrda-workflow}
+### Testing differences in community composition between sample groups {#sec-dbrda-workflow}
 
 Permutational Analysis of Variance (PERMANOVA; [-@Anderson2001]) is
 a widely used non-parametric multivariate method that aims to
@@ -500,7 +499,7 @@ in the formula matters. In this case, each variable is analyzed sequentially, an
 the result is different when more than 1 variable is introduced and their order differs.
 Therefore, it is recommended to set `by = "margin"`, which specifies that the
 marginal effect of each variable is analyzed individually. You can view a
-comparison between the two designs in chapter \@ref(compare-permanova).
+comparison between the two designs in chapter [@sec-compare-permanova].
 
 We can perform PERMANOVA either with `adonis2` function or by first performing
 dbRDA and then applying permutational test its results. An advantage of the latter
@@ -609,5 +608,5 @@ methods store the reducedDim object into the specified TreeSE.
 
 For more information on clustering samples by beta diversity, you can refer to:
 
-* [How to extract information from clusters](http://bioconductor.org/books/release/OSCA/clustering.html)
-* Chapter \@ref(clustering) on community typing
+* [How to extract information from clusters](http://bioconductor.org/books/release/OSCA/clustering.html)  
+* Chapter [@sec-clustering] on community typing  
