--- a/inst/pages/21_microbiome_community.qmd
+++ b/inst/pages/21_microbiome_community.qmd
@@ -1,4 +1,4 @@
-# Community Composition {#microbiome-community}
+# Community Composition {#sec-microbiome-community}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -11,7 +11,7 @@ data("GlobalPatterns", package="mia")
 tse <- GlobalPatterns
 ```
 
-## Visualizing taxonomic composition {#visual-composition}
+## Visualizing taxonomic composition {#sec-visual-composition}
 
 ### Composition barplot
 
@@ -41,7 +41,7 @@ plotAbundance(tse, assay.type="relabundance", rank = "Phylum",
               order_sample_by = "Bacteroidetes")
 ```
 
-### Composition heatmap {#composition-heatmap}
+### Composition heatmap {#sec-composition-heatmap}
 
 Community composition can be visualized with heatmap, where the
 horizontal axis represents samples and the vertical axis the
@@ -93,7 +93,6 @@ ggplot(df, aes(x = SampleID, y = FeatureID, fill = clr_z)) +
         legend.key.size = unit(1, "cm")) +
   labs(x = "Samples", y = "Taxa")
 ```
-
 
 _pheatmap_ is a package that provides methods to plot clustered heatmaps. 
 
@@ -230,7 +229,5 @@ more complex heatmaps, such as
 and ComplexHeatmap [@ComplexHeatmap].
 [sechm](http://www.bioconductor.org/packages/release/bioc/vignettes/sechm/inst/doc/sechm.html)
 package provides wrapper for _ComplexHeatmap_ and its usage is
-explained in chapter \@ref(viz-chapter) along with the `pheatmap`
+explained in chapter [@sec-viz-chapter] along with the `pheatmap`
 package for clustered heatmaps.
-
-
