--- a/inst/pages/22_communitytyping.Rmd
+++ b/inst/pages/22_communitytyping.Rmd
@@ -1,4 +1,4 @@
-# Community Typing {#community-typing}
+# Community Typing {#sec-community-typing}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
