--- a/inst/pages/23_multi-assay_analyses.qmd
+++ b/inst/pages/23_multi-assay_analyses.qmd
@@ -1,4 +1,4 @@
-# Multi-Assay Analyses {#multi-assay-analyses}
+# Multi-Assay Analyses {#sec-multi-assay-analyses}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -30,9 +30,9 @@ making this framework particularly suited for multi-assay microbiome
 data incorporating different types of complementary data sources in a
 single reproducible workflow. Solutions to a number of data
 integration problems are discussed in more detail in Section
-\@ref(containers). Another experiment can be stored in _altExp_ slot
+[@sec-containers]. Another experiment can be stored in _altExp_ slot
 of SE data container. Alternatively, both experiments can be stored
-side-by-side in a MAE data container (see sections \@ref(alt-exp) and \@ref(mae)
+side-by-side in a MAE data container (see sections [@sec-alt-exp] and [@sec-mae]
 to learn more about altExp and MAE objects, respectively). Different
 experiments are first imported as single-assay data containers similarly to
 the case when only one experiment is present. After that, the
@@ -53,7 +53,7 @@ This example data can be loaded from microbiomeDataSets. The data is
 already in MAE format. It includes three different experiments:
 microbial abundance data, metabolite concentrations, and data about
 different biomarkers. If you like to construct the same data object from the
-original files instead, [here](https://microbiome.github.io/OMA/containers.html#loading-experimental-microbiome-data) 
+original files instead, [here]([@sec-loading-experimental-microbiome-data]) 
 you can find help for importing data into an SE object.
 
 ```{r cross-correlation1}
@@ -91,7 +91,7 @@ getWithColData(mae, "metabolites")
 getWithColData(mae, "biomarkers")
 ```
 
-## Cross-correlation Analysis {#cross-correlation}
+## Cross-correlation Analysis {#sec-cross-correlation}
 
 Next we can perform a cross-correlation analysis. Let us analyze if
 individual bacteria genera are correlated with concentrations of
@@ -143,7 +143,7 @@ plot <- Heatmap(correlations$cor,
 plot
 ```
 
-## Multi-Omics Factor Analysis {#mofa}
+## Multi-Omics Factor Analysis {#sec-mofa}
 
 Multi-Omics Factor Analysis (MOFA) is an unsupervised method for integrating multi-omic data sets in a downstream analysis [@Argelaguet2018]. It could be
 seen as a generalization of principal component analysis. Yet, with the ability
@@ -155,7 +155,7 @@ package for the analysis, and
 [install](https://biofam.github.io/MOFA2/installation.html) the
 corresponding dependencies.
 
-```{r MOFA2, message=FALSE, warning=FALSE}
+```{r MOFA2, message=FALSE, warning=FALSE, eval = FALSE}
 library(MOFA2)
 
 # For inter-operability between Python and R, and setting Python dependencies,
@@ -174,7 +174,7 @@ default. We can also use Poisson or Bernoulli distributions among others.
 Note that duplicates, such as "uncultured", might appear when aggregating the microbiome data by a taxonomic rank. To check for duplicates, run `any(duplicated(rownames(mae[[1]])))`. If it returns `TRUE`, then the
 duplicates are present. We can add `rownames(mae[[1]]) <- getTaxonomyLabels(mae[[1]], make_unique=TRUE)` to remove them.
 
-```{r, message=FALSE, warning=FALSE}
+```{r, message=FALSE, warning=FALSE, eval = FALSE}
 library(MOFA2)
 # For simplicity, classify all high-fat diets as high-fat, and all the low-fat 
 # diets as low-fat diets
@@ -211,7 +211,7 @@ model
 
 Model options can be defined as follows:
 
-```{r, message=FALSE, warning=FALSE}
+```{r, message=FALSE, warning=FALSE, eval = FALSE}
 model_opts <- get_default_model_options(model)
 model_opts$num_factors <- 5
 head(model_opts)
@@ -219,14 +219,14 @@ head(model_opts)
 
 Training options for the model are defined in the following way:
 
-```{r, message=FALSE, warning=FALSE}
+```{r, message=FALSE, warning=FALSE, eval = FALSE}
 train_opts <- get_default_training_options(model)
 head(train_opts)
 ```
 
 The model is then prepared  with `prepare_mofa` and trained with `run_mofa`:
 
-```{r, message=FALSE, warning=FALSE}
+```{r, message=FALSE, warning=FALSE, eval = FALSE}
 model.prepared <- prepare_mofa(
   object = model,
   model_options = model_opts
@@ -239,7 +239,7 @@ model.trained <- run_mofa(model.prepared, use_basilisk = TRUE)
 
 The explained variance is visualized with the `plot_variance_explained` function:
 
-```{r, message=FALSE, warning=FALSE, fig.height=8, fig.width=10}
+```{r, message=FALSE, warning=FALSE, fig.height=8, fig.width=10, eval = FALSE}
 library(patchwork)
 library(ggplot2)
 
@@ -254,7 +254,7 @@ wrap_plots(plot_list, nrow = 2) +
 
 The top weights for each assay using all five factors:
 
-```{r, warning=FALSE, message=FALSE, fig.height=10, fig.width=10}
+```{r, warning=FALSE, message=FALSE, fig.height=10, fig.width=10, eval = FALSE}
 custom_plotter <- function(name) {
   
   p <- plot_top_weights(model.trained,
@@ -271,7 +271,3 @@ wrap_plots(plot_list, nrow = 3) & theme(text = element_text(size = 8))
 ```
 
 More tutorials and examples of using the package are found at [link](https://biofam.github.io/MOFA2/tutorials.html)
-
-
-
-
