--- a/inst/pages/24_clustering.qmd
+++ b/inst/pages/24_clustering.qmd
@@ -1,4 +1,4 @@
-# Community Typing (Clustering) {#clustering}
+# Community Typing (Clustering) {#sec-clustering}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -7,7 +7,7 @@ chapterPreamble()
 
 Clustering techniques are unsupervised machine learning that aims to find groups, called clusters, that share a pattern in the data. In the microbiome context, clustering techniques are included in microbiome community typing methods. For example, clustering allow samples to be distinguished from each other based on their microbiome community composition. There are multiple clustering algorithms available.
 
-The data can be clustered either based on features or samples. Hence, depending on the analysis goal the data might require transformation. The examples below are focused on sample clustering. To learn about feature clustering, check out chapter \@ref(taxa-clustering).
+The data can be clustered either based on features or samples. Hence, depending on the analysis goal the data might require transformation. The examples below are focused on sample clustering. To learn about feature clustering, check out chapter [@sec-taxa-clustering].
 
 ## Custom tools
 
@@ -234,7 +234,6 @@ More detailed information about the clusters can be accessed in the metadata. Th
 head(metadata(altExp(tse, "dmm"))$DMM$prob, 10) 
 ```
 
-
 Once the optimal model have been confirmed, we can find out which samples are grouped with each other. The table below shows one sample of each sample type clustered in either of the groups. We can notice that DMM can distinguish environmental samples into one group, and mock and human samples into another. For clarity, in this example, the probabilities for each sample to belong in each cluster have been rounded. 
 
 ```{r dmm8}
@@ -270,7 +269,6 @@ for (i in 1:2) {
   print(p)
 }
 ```
-
 
 We use `calculateDMNgroup` function to have an overview of the best model. The function groups samples by `SampleType` column from colData and returns DMNGroup object that contains a summary.
 
@@ -347,8 +345,8 @@ Biclusters can be visualized using heatmap or boxplot, for
 instance. For checking purposes, also scatter plot might be valid
 choice.
 
-Check more ideas for heatmaps from chapters \@ref(viz-chapter) and
-\@ref(microbiome-community).
+Check more ideas for heatmaps from chapters [@sec-viz-chapter] and
+[@sec-microbiome-community].
 
 ### Taxa vs samples
 
