--- a/inst/pages/30_differential_abundance.qmd
+++ b/inst/pages/30_differential_abundance.qmd
@@ -1,4 +1,4 @@
-# Differential Abundance {#differential-abundance}
+# Differential Abundance {#sec-differential-abundance}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -9,7 +9,7 @@ This section provides an introduction to Differential Abundance Analysis (DAA),
 which is used to identify differences in the abundances of individual taxa (at
 any taxonomic level) between two or more groups, such as treatment and control.
 Here, we demonstrate its implementation on Tengeler2020, described in chapter
-\@ref(tengeler-desc).
+[@sec-tengeler-desc].
 
 The goal of DAA is to identify biomarkers of a certain phenotype or condition,
 and gain understanding of a complex system by looking at its isolated components.
@@ -19,7 +19,6 @@ insights into the pathophysiology of the disease. In other words, differentially
 abundant taxa can be involved in the dynamics of the disease, which in turn helps
 understand the system as a whole. Despite its relevance in current research,
 the DAA approach has also been subject to debate [@Quinn2021].
-
 
 ## Statistical challenges of microbiome data 
 
@@ -128,7 +127,6 @@ While some DAA tools provide optional arguments for prevalence filtering, here
 we filtered the tse object directly. This way, we ensure that the input data
 remains the same when multiple tools are used.
 
-
 ### ALDEx2
 
 In this section, we will show how to perform DAA with ALDEx2, which can be
@@ -155,7 +153,6 @@ set.seed(123)
 x <- aldex.clr(assay(tse), tse$patient_status)     
 ```
 
-
 The t-test:
 
 ```{r aldex2-ttest}
@@ -163,7 +160,6 @@ The t-test:
 # test on the data returned by aldex.clr
 x_tt <- aldex.ttest(x, paired.test = FALSE, verbose = FALSE)
 ```
-
 
 Effect sizes:
 
@@ -215,7 +211,6 @@ keep the comparison simple, we will here use the p-value as decision
 criterion. But please be aware that the effect size together with the
 CI is a better answer to the question we are typically interested in.
 
-
 ```{r aldex2-res}
 aldex_out %>%
   rownames_to_column(var = "Genus") %>%
@@ -259,7 +254,6 @@ confounding. We show this further below. Again, please make sure to check the
 as well as the linked tutorials to learn about the additional arguments 
 that we specify.
 
-
 ```{r run-ancombc, warning=FALSE}
 # Load package
 library(ANCOMBC)
@@ -295,7 +289,6 @@ ancombc2_out$res %>%
   head() %>%
   knitr::kable()
 ```
-
 
 ### MaAsLin2 
 
@@ -339,7 +332,6 @@ This will create a folder that is called like in the output specified
 above. It contains also figures to visualize difference between
 significant taxa.
 
-
 ### LinDA 
 
 Lastly, we cover linear models for differential abundance analysis of
@@ -353,7 +345,6 @@ tool that achieves a very good power/fdr trade-off together with
 ANCOMBC according to the review. The speed improvements might make it
 critical especially for datasets that have higher sample or feature
 set sizes.
-
 
 ```{r run-linda}
 # Load package
@@ -390,7 +381,6 @@ rate, which has the following components:
   sampling variability and zero inflation;
   3. Reference-based multiple-stage normalization to address
   compositional effects;
-
 
 ```{r run-zicoseq}
 # Load package
@@ -438,7 +428,6 @@ expected to agree on a few differentially abundant taxa. To draw more informed
 conclusions, it is good practice to compare the outcomes of different methods in terms of found features, their effect sizes and significances, as well as other method-specific aspects. Such comparative approach is outlined in
 [this exercise](#compare-daa-methods).
 
-
 ## DAA with confounding
 
 Confounders can be defined as variables that are related to and affect the
@@ -476,7 +465,6 @@ control for uneven sequencing efforts across samples, rarefaction generally repr
 # Compute and store library size in colData
 colData(tse)$library_size <- colSums(assay(tse, "counts"))
 ```
-
 
 ### ANCOM-BC
 
