--- a/inst/pages/40_machine_learning.qmd
+++ b/inst/pages/40_machine_learning.qmd
@@ -1,4 +1,4 @@
-# Machine Learning {#machine_learning}
+# Machine Learning {#sec-machine_learning}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -15,7 +15,6 @@ Machine learning can be divided into supervised and unsupervised machine learnin
 Supervised ML is used to predict outcome based on the data. Unsupervised ML is used, 
 for example, to reduce dimensionality (e.g. PCA) and to find clusters from the 
 data (e.g., k-means clustering). 
-
 
 ## Supervised machine learning
 
@@ -88,7 +87,7 @@ package. However, we can also use it directly.
 
 Let's use xgboost model which is another commonly used algorithm in bioinformatics.
 
-```{r super4}
+```{r super4, eval = FALSE}
 # Set seed for reproducibility
 set.seed(6358)
 
@@ -124,7 +123,7 @@ model <- train(x = assay,
 Let's create ROC curve which is a commonly used method in binary classification.
 For unbalanced data, you might want to plot precision-recall curve. 
 
-```{r super5}
+```{r super5, eval = FALSE}
 library(MLeval)
 
 # Calculate different evaluation metrics
@@ -145,7 +144,5 @@ from big datasets.
 
 For unsupervised machine learning, please refer to chapters that are listed below:
 
-- Chapter \@ref(clustering)
-- Chapter \@ref(community-similarity) 
-
-
+- Chapter [@sec-clustering]
+- Chapter [@sec-community-similarity] 
