--- a/inst/pages/90_acknowledgments.qmd
+++ b/inst/pages/90_acknowledgments.qmd
@@ -1,4 +1,4 @@
-# Developers {-}
+# Contributions
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -32,7 +32,6 @@ coordinated by:
 
 - *Tuomas Borman*, PhD researcher and the lead developer of OMA/mia at
    the Department of Computing, University of Turku. 
-
 
 ### Contributors {-}
 
@@ -81,8 +80,6 @@ key authors/contributors include:
 
 - *Lu Yang* 
 
-
-
 ### Acknowledgments {-}
 
 This work would not have been possible without the countless
@@ -107,7 +104,7 @@ supporting the _TreeSummarizedExperiment_ ecosystem for microbiome
 research, including but not limited to the R packages mia, miaViz,
 miaTime, miaSim, philr, ANCOMBC, curatedMetagenomicData, scater,
 scuttle, and other packages, some of which are listed in Section
-\@ref(ecosystem). A number of other contributors have advanced the
+[@sec-ecosystem]. A number of other contributors have advanced the
 ecosystem further, and will be acknowledged in the individual
 packages, [pull
 requests](https://github.com/microbiome/OMA/graphs/contributors),
@@ -169,4 +166,3 @@ This work has been supported by:
 * Computational Life Science Research Program, [Biocity Turku](https://biocityturku.fi/)
 
 * [Turku University Foundation](https://www.yliopistosaatio.fi/en/)
-
