--- a/inst/pages/97_extra_materials.qmd
+++ b/inst/pages/97_extra_materials.qmd
@@ -1,14 +1,7 @@
-# (PART) Appendix {-}
-
-# Extra material {#extras}
+# Extra material {#sec-extras} 
 
 ```{r}
 knitr::opts_chunk$set(eval=FALSE)
-```
-
-```{r setup, echo=FALSE, results="asis"}
-library(rebook)
-chapterPreamble()
 ```
 
 ## Slides
@@ -16,8 +9,7 @@ chapterPreamble()
 [Outreach material](https://microbiome.github.io/outreach/) includes
 slide sets for training events.
 
-
-## PERMANOVA comparison {#compare-permanova}
+## PERMANOVA comparison {#sec-compare-permanova}
 
 Here we present two possible uses of the `adonis2` function which performs PERMANOVA. The
 optional argument `by` has an effect on the statistical outcome, so its two options are
@@ -35,7 +27,6 @@ library(purrr)
 Let us load the _enterotype_ TSE object and run PERMANOVA for
 different orders of three variables with two different approaches:
 `by = "margin"` or `by = "terms"`.
-
 
 ```{r permanova_prep, message = FALSE, warning = FALSE}
 # load and prepare data
@@ -58,8 +49,6 @@ margin_df <- data.frame("Formula" = formulas,
                         "Gender" = rep(0, 6),
                         "Nationality" = rep(0, 6))
 ```
-
-
 
 ```{r permanova_loop, message = FALSE, warning = FALSE}
 for (row_idx in 1:nrow(var_perm)) {
@@ -100,15 +89,11 @@ for (row_idx in 1:nrow(var_perm)) {
 }
 ```
 
-
-
-
 The following table displays the p-values for the three variables
 ClinicalStatus, Gender and Nationality obtained by PERMANOVA with
 `adonis2`. Note that the p-values remain identical when `by =
 "margin"`, but change with the order of the variables in the
 formula when `by = "terms"` (default).
-
 
 ```{r permanova_table, message = FALSE, warning = FALSE}
 
@@ -118,7 +103,6 @@ df <- terms_df %>%
 knitr::kable(df)
 ```
 
-
 ## Bayesian Multinomial Logistic-Normal Models
 
 Analysis using such model could be performed with the function
@@ -127,23 +111,12 @@ Logistic-Normal Linear Regression model; see
 [vignette](https://jsilve24.github.io/fido/articles/introduction-to-fido.html)
 of package.
 
-
 The following presents such an exemplary analysis based on the 
 data of @Sprockett2020 available
 through `microbiomeDataSets` package.
 
-
 ```{r, message=FALSE, warning=FALSE}
 library(fido)
-```
-
-Loading the libraries and importing data:
-
-```{r, message=FALSE, warning=FALSE}
-library(fido)
-```
-
-```{r, message=FALSE, warning=FALSE, eval=FALSE}
 library(microbiomeDataSets)
 tse <- SprockettTHData()
 ```
@@ -151,13 +124,11 @@ tse <- SprockettTHData()
 ```{r, message=FALSE, warning=FALSE, echo=FALSE}
 # saveRDS(tse, file="data/SprockettTHData.Rds")
 # Hidden reading of the saved data
-tse <- readRDS("data/SprockettTHData.Rds")
+tse <- readRDS(system.file("extdata", "SprockettTHData.Rds", package = "OMA"))
 ```
-
 
 We pick three covariates ("Sex","Age_Years","Delivery_Mode") during this
 analysis as an example, and beforehand we check for missing data:
-
 
 ```{r, message=FALSE, warning=FALSE}
 library(mia)
@@ -224,6 +195,7 @@ Printing a summary about the posterior:
 ```{r, message=FALSE, warning=FALSE}
 ppc_summary(posterior)
 ```
+
 Plotting the summary of the posterior distributions of the regression parameters:
 
 ```{r, message=FALSE, warning=FALSE}
@@ -236,7 +208,6 @@ Taking a closer look at "Sex" and "Delivery_Mode":
 ```{r, message=FALSE, warning=FALSE}
 plot(posterior, par="Lambda", focus.cov = rownames(X)[c(2,4)])
 ```
-
 
 ## Interactive 3D Plots
 
@@ -251,8 +222,7 @@ library(knitr)
 knitr::knit_hooks$set(webgl = hook_webgl)
 ```
 
-
-In this section we make a 3D version of the earlier  Visualizing the most dominant genus on PCoA (see \@ref(quality-control)), with the help of the plotly [@Sievert2020].
+In this section we make a 3D version of the earlier  Visualizing the most dominant genus on PCoA (see [@sec-quality-control]), with the help of the plotly [@Sievert2020].
 
 ```{r, message=FALSE, warning=FALSE}
 # Importing necessary libraries
@@ -293,4 +263,3 @@ most_abundant_percent <- round(most_abundant_freq/sum(most_abundant_freq)*100, 1
 e <- attr(reducedDim(tse_Genus, "PCoA_BC"), "eig");
 var_explained <- e/sum(e[e>0])*100
 ```
-
