--- a/inst/index.qmd
+++ b/inst/index.qmd
@@ -1,23 +1,19 @@
---- 
-title: "Orchestrating Microbiome Analysis with Bioconductor"
-documentclass: book
-site: bookdown::bookdown_site
-bibliography: [book.bib]
-biblio-style: apalike
-link-citations: no
-github-repo: microbiome/OMA
-always_allow_html: yes
----
-
-```{r, echo=FALSE}
-.gh_url <- file.path('https://github.com', rmarkdown::metadata[['github-repo']])
+```{r "intro"}
+#| echo: false
+intro <- tryCatch(
+    {
+        library(htmltools)
+        description <- packageDescription("OMA")
+        pkg <- description$Package
+        version <- description$Version
+        authors <- eval(parse(text = description$Authors))
+        license <- description$License
+    }, 
+    error = function(e) {"Local preview"}
+)
 ```
 
----
-date: "`r rebook::openingDetails(Copyright='', Source=.gh_url)`"
-url: "`r .gh_url`"
----
-
+`r intro`
 
 # Welcome {-}
 
@@ -61,31 +57,53 @@ package. The material is **free to use** with the [Creative Commons
 Attribution-NonCommercial
 3.0](https://creativecommons.org/licenses/by-nc/3.0/us/) License.
 
+# Docker image {-}
 
---------------
+A `Docker` image built from this repository is available here: 
 
-```{r include=FALSE}
-library(Cairo)
+👉 [ghcr.io/js2264/oma](https://ghcr.io/js2264/oma) 🐳
 
-# global knitr options
-knitr::opts_chunk$set(
-  fig.width=10,
-  dpi=300,
-  dev = "png",
-  dev.args = list(type = "cairo-png")
+::: {.callout-tip icon='true'}
+## Get started now 🎉
+
+You can get access to all the packages used in this book in < 1 minute, 
+using this command in a terminal: 
+
+```{sh "docker", filename="bash"}
+#| eval: false
+docker run -it ghcr.io/js2264/oma:devel R
+```
+
+:::
+
+# RStudio Server {-}
+
+An RStudio Server instance can be initiated from the `Docker` image as follows: 
+
+```{sh "rstudio", filename="bash"}
+#| eval: false
+docker run \
+    --volume <local_folder>:<destination_folder> \
+    -e PASSWORD=OHCA \
+    -p 8787:8787 \
+    ghcr.io/js2264/oma:devel
+```
+
+The initiated RStudio Server instance will be available at 
+[https://localhost:8787](https://localhost:8787).
+
+# Session info {-}
+
+::: {.callout-note collapse="true"}
+
+## Click to expand 👇
+
+```{r "session info"}
+#| cache: false
+sessioninfo::session_info(
+    installed.packages()[,"Package"], 
+    include_base = TRUE
 )
 ```
 
-```{js, echo = FALSE}
-// This block adds image to the front page
-title=document.getElementById('header');
-title.innerHTML = title.innerHTML + 
-
-'<img src="https://user-images.githubusercontent.com/60338854/128359392\
--6feef8df-30e9-4ea0-ae3b-4bb619d746ed.png" alt="Microbiome" width="50%"/>' +
-
-'<p style="font-size:12px">Figure source: Moreno-Indias <i>et al</i>. (2021) \
-<a href="https://doi.org/10.3389/fmicb.2021.635781">Statistical and \
-Machine Learning Techniques in Human Microbiome Studies: Contemporary \
-Challenges and Solutions</a>. Frontiers in Microbiology 12:11.</p>'
-```
+:::
