--- a/inst/pages/06_packages.qmd
+++ b/inst/pages/06_packages.qmd
@@ -1,12 +1,11 @@
-# Packages {#packages}
+# Packages {#sec-packages}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
 chapterPreamble()
 ```
 
-<img src="general/figures/mia_logo.png" width="100" alt="mia logo" align="right" style="margin: 0 1em 0 1em" />
-
+<img src="images/mia_logo.png" width="100" alt="mia logo" align="right" style="margin: 0 1em 0 1em" />
 
 The Bioconductor microbiome data science framework consists of:
 
@@ -14,22 +13,21 @@ The Bioconductor microbiome data science framework consists of:
 - **R/Bioconductor packages** that provide dedicated methods 
 - **community** of users and developers 
 
-<img src="general/figures/ecosystem.png" width="100" alt="mia logo" align="right" style="margin: 0 1em 0 1em" />
+<img src="images/ecosystem.png" width="100" alt="mia logo" align="right" style="margin: 0 1em 0 1em" />
 
-This section provides an overview of the package ecosystem. Section
-\@ref(example-data) links to various open microbiome data resources
+This section provides an overview of the package ecosystem. 
+[@sec-example-data] links to various open microbiome data resources
 that support this framework.
-
 
 ## Package installation
 
 You can install all packages that are required to run every example in this book via the following command:
 
 ```{r eval=FALSE, message=FALSE}
-source("https://raw.githubusercontent.com/microbiome/OMA/master/install_packages.R")
+remotes::install_github('js2264/OMA')
 ```
 
-### Installing specific packages {#packages_specific}
+### Installing specific packages {#sec-packages_specific}
 
 You can install R packages of your choice with the following command
 line procedure.
@@ -59,14 +57,12 @@ all available tools.
 devtools::install_github("microbiome/mia")
 ```
 
-
-## Package ecosystem {#ecosystem}
+## Package ecosystem {#sec-ecosystem}
 
 Methods for `(Tree)SummarizedExperiment` and `MultiAssayExperiment`
 data containers are provided by multiple independent developers
 through R/Bioconductor packages. Some of these are listed below (tips
 on new packages are [welcome](https://microbiome.github.io)).
-
 
 ### mia package family
 
@@ -77,15 +73,13 @@ The mia package family provides general methods for microbiome data wrangling, a
 - [miaSim](https://microbiome.github.io/miaSim/): Microbiome data simulations [@Simsek2021]
 - [miaTime](https://microbiome.github.io/miaTime/): Microbiome time series analysis [@Lahti2021]
 
-
-### Differential abundance {#sub-diff-abund}
+### Differential abundance {#sec-sub-diff-abund}
 
 The following DA methods support `(Tree)SummarizedExperiment`.
 
 - [ANCOMBC](https://bioconductor.org/packages/devel/bioc/html/ANCOMBC.html) for differential abundance analysis
 - [benchdamic](https://bioconductor.org/packages/release/bioc/vignettes/benchdamic/inst/doc/intro.html) for benchmarking differential abundance methods
 - [ALDEx2](https://www.bioconductor.org/packages/release/bioc/html/ALDEx2.html) for differential abundance analysis
-
 
 ### Other packages
 
@@ -100,9 +94,7 @@ The following DA methods support `(Tree)SummarizedExperiment`.
   converting the TreeSE data into phyloseq with
   `makePhyloseqFromTreeSummarizedExperiment`.
 
-
 ### Open microbiome data 
 
 Hundreds of published microbiome data sets are readily available in
-these data containers (see \@ref(example-data)).
-
+these data containers (see [@sec-example-data]).
