--- a/inst/pages/24_biclustering.Rmd
+++ b/inst/pages/24_biclustering.Rmd
@@ -1,4 +1,4 @@
-# Biclustering {#biclustering}
+# Biclustering {#sec-biclustering}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -23,7 +23,7 @@ solutions to apply biclustering to them.
 Biclusters can be visualized using heatmap or boxplot, for instance. For checking purposes, 
 also scatter plot might be valid choice.
 
-Check more ideas for heatmaps from chapters \@ref(viz-chapter) and \@ref(microbiome-community.
+Check more ideas for heatmaps from chapters \@ref(viz-chapter) and \@ref(microbiome-community).
 
 
 ## Taxa vs samples
