--- a/inst/pages/80_training.qmd
+++ b/inst/pages/80_training.qmd
@@ -1,6 +1,4 @@
-# (PART) Training {-}
-
-# Training {#training}
+# Training {#sec-training}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -10,7 +8,7 @@ chapterPreamble()
 The page provides practical information to support training and self-study.
 
 
-## Checklist {#checklist}
+## Checklist {#sec-checklist}
 
 Brief checklist to prepare for training (see below for links).
 
@@ -19,7 +17,7 @@ Brief checklist to prepare for training (see below for links).
  * Join Gitter online chat for support
 
 
-## Recommended software {#software}
+## Recommended software {#sec-software}
 
 We recommend to install and set up the relevant software packages on
 your own computer as this will support later use. The essential
@@ -32,17 +30,17 @@ components to install include:
   [Rstudio home page](https://www.rstudio.com/) for more
   information. RStudio is optional.
 
-* Install key R packages (Section \@ref(packages) provides an installation script)
+* Install key R packages (Section [@sec-packages] provides an installation script)
 
 
 * After a successful installation you can consider trying out examples
-  from Section \@ref(exercises) already before training. **You can run
+  from Section [@sec-exercises] already before training. **You can run
   the workflows by simply copy-pasting examples.** You can then test
   further examples from this tutorial, modifying and applying these
   techniques to your own data. Plain source code for the individual chapters of this book are available via [Github](https://github.com/microbiome/OMA/tree/master/R)
 
 
-## Study material {#material}
+## Study material {#sec-material}
 
 We encourage to familiarize with the material and test examples in advance but this is optional:
 
@@ -56,9 +54,9 @@ We encourage to familiarize with the material and test examples in advance but t
 
  * [Other outreach material](https://github.com/microbiome/outreach)
 
- * [Exercises](#exercises) for self-study
+ * @sec-exercises for self-study
 
- * [Resources](#resources) and links to complementary external material
+ * @sec-resources and links to complementary external material
 
 
 
@@ -83,7 +81,7 @@ The following online books provide good general data science background:
 
 
 
-## Code of Conduct {#coc}
+## Code of Conduct {#sec-coc}
 
 We support the [Bioconductor Code of Conduct](https://bioconductor.github.io/bioc_coc_multilingual/). The community values an open approach to science that promotes 
 
