--- a/inst/pages/95_resources.qmd
+++ b/inst/pages/95_resources.qmd
@@ -1,31 +1,38 @@
 
-# Resources {#resources}
+# Resources {#sec-resources}
 
 ## Data containers
 
 ### Data container documentation
 
- * SingleCellExperiment [@R_SingleCellExperiment]
-   + [Online tutorial](https://bioconductor.org/packages/release/bioc/vignettes/SingleCellExperiment/inst/doc/intro.html)
-   + [Project page](https://bioconductor.org/packages/release/bioc/html/SingleCellExperiment.html)
-   + [Publication](https://doi.org/10.1038/s41592-019-0654-x)
- * SummarizedExperiment [@R_SummarizedExperiment]
-   + [Online tutorial](https://bioconductor.org/packages/release/bioc/vignettes/SummarizedExperiment/inst/doc/SummarizedExperiment.html)
-   + [Project page](https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html)
- * TreeSummarizedExperiment [@R_TreeSummarizedExperiment]
-   + [Online tutorial](https://bioconductor.org/packages/release/bioc/vignettes/TreeSummarizedExperiment/inst/doc/Introduction_to_treeSummarizedExperiment.html)
-   + [Project page](https://www.bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html)
-   + [Publication](https://doi.org/10.12688/f1000research.26669.2)
-* MultiAssayExperiment [@Ramos2017]
-   + [Online tutorial](https://www.bioconductor.org/packages/release/bioc/vignettes/MultiAssayExperiment/inst/doc/MultiAssayExperiment.html)
-   + [Project page](https://bioconductor.org/packages/release/bioc/html/MultiAssayExperiment.html)   
-   + [Publication](https://doi.org/10.1158/0008-5472.CAN-17-0344)
+* SingleCellExperiment [@R_SingleCellExperiment]  
+
+   + [Online tutorial](https://bioconductor.org/packages/release/bioc/vignettes/SingleCellExperiment/inst/doc/intro.html)  
+   + [Project page](https://bioconductor.org/packages/release/bioc/html/SingleCellExperiment.html)  
+   + [Publication](https://doi.org/10.1038/s41592-019-0654-x)  
+
+* SummarizedExperiment [@R_SummarizedExperiment]  
+
+   + [Online tutorial](https://bioconductor.org/packages/release/bioc/vignettes/SummarizedExperiment/inst/doc/SummarizedExperiment.html)  
+   + [Project page](https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html)  
+
+* TreeSummarizedExperiment [@R_TreeSummarizedExperiment]  
+
+   + [Online tutorial](https://bioconductor.org/packages/release/bioc/vignettes/TreeSummarizedExperiment/inst/doc/Introduction_to_treeSummarizedExperiment.html)  
+   + [Project page](https://www.bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html)  
+   + [Publication](https://doi.org/10.12688/f1000research.26669.2)  
+
+* MultiAssayExperiment [@Ramos2017]  
+
+   + [Online tutorial](https://www.bioconductor.org/packages/release/bioc/vignettes/MultiAssayExperiment/inst/doc/MultiAssayExperiment.html)  
+   + [Project page](https://bioconductor.org/packages/release/bioc/html/MultiAssayExperiment.html)     
+   + [Publication](https://doi.org/10.1158/0008-5472.CAN-17-0344)  
 
 ### Other relevant containers
 
-* [DataFrame](https://rdrr.io/bioc/S4Vectors/man/DataFrame-class.html) which behaves similarly to `data.frame`, yet efficient and fast when used with large datasets.
-* [DNAString](https://rdrr.io/bioc/Biostrings/man/DNAString-class.html) along with `DNAStringSet`,`RNAString` and `RNAStringSet`  efficient storage and handling of long biological sequences are offered within the Biostrings package [@R_Biostrings].
-* GenomicRanges ([@GenomicRanges2013]) offers an efficient representation and manipulation of genomic annotations and alignments, see e.g. `GRanges` and `GRangesList` at [An Introduction to the GenomicRangesPackage](https://bioconductor.org/packages/release/bioc/vignettes/GenomicRanges/inst/doc/GenomicRangesIntroduction.html).
+* [DataFrame](https://rdrr.io/bioc/S4Vectors/man/DataFrame-class.html) which behaves similarly to `data.frame`, yet efficient and fast when used with large datasets.  
+* [DNAString](https://rdrr.io/bioc/Biostrings/man/DNAString-class.html) along with `DNAStringSet`,`RNAString` and `RNAStringSet`  efficient storage and handling of long biological sequences are offered within the Biostrings package [@R_Biostrings].    
+* GenomicRanges ([@GenomicRanges2013]) offers an efficient representation and manipulation of genomic annotations and alignments, see e.g. `GRanges` and `GRangesList` at [An Introduction to the GenomicRangesPackage](https://bioconductor.org/packages/release/bioc/vignettes/GenomicRanges/inst/doc/GenomicRangesIntroduction.html).    
 
 [NGS Analysis Basics](http://girke.bioinformatics.ucr.edu/GEN242/tutorials/rsequences/rsequences/) provides a walk-through of the above-mentioned features with detailed examples.
 
@@ -81,11 +88,11 @@ of the datasets increased. Further details on such results can be found in the
 The phyloseq container provides analogous methods to TreeSE. The following
 material can be used to familiarize with such alternative methods:
 
- * [List of R tools for microbiome analysis](https://microsud.github.io/Tools-Microbiome-Analysis/)
- * phyloseq [@McMurdie2013]
- * [microbiome tutorial](http://microbiome.github.io/tutorials/)
- * [microbiomeutilities](https://microsud.github.io/microbiomeutilities/)
- * Bioconductor Workflow for Microbiome Data Analysis: from raw reads to community analyses [@Callahan2016].
+ * [List of R tools for microbiome analysis](https://microsud.github.io/Tools-Microbiome-Analysis/)  
+ * phyloseq [@McMurdie2013]  
+ * [microbiome tutorial](http://microbiome.github.io/tutorials/)  
+ * [microbiomeutilities](https://microsud.github.io/microbiomeutilities/)  
+ * Bioconductor Workflow for Microbiome Data Analysis: from raw reads to community analyses [@Callahan2016].  
 
 
 ## R programming resources
@@ -97,13 +104,13 @@ for a kickstart to R programming. Further support resources are
 available through the Bioconductor
 project [@Huber2015].
 
- * [Base R and RStudio cheatsheets](https://geomoer.github.io/moer-base-r/cheatsheet.html)
- * [Package-specific cheatsheets](https://www.rstudio.com/resources/cheatsheets/)
- * [Visualization with ggplot2](https://ggplot2.tidyverse.org/) 
- * [R graphics cookbook](http://www.cookbook-r.com/Graphs/)
+ * [Base R and RStudio cheatsheets](https://geomoer.github.io/moer-base-r/cheatsheet.html)  
+ * [Package-specific cheatsheets](https://www.rstudio.com/resources/cheatsheets/)  
+ * [Visualization with ggplot2](https://ggplot2.tidyverse.org/)   
+ * [R graphics cookbook](http://www.cookbook-r.com/Graphs/)  
 
 
-### Bioconductor Classes {#bioc_intro}
+### Bioconductor Classes {#sec-bioc_intro}
 
 **S4 system**
 
@@ -113,18 +120,18 @@ deployed in R/Bioconductor packages [@Huber2015].
     
 |   Online Document:
 
-* Hervé Pagès, [A quick overview of the S4 class system](https://bioconductor.org/packages/release/bioc/vignettes/S4Vectors/inst/doc/S4QuickOverview.pdf).
-* Laurent Gatto, [A practical tutorial on S4 programming](https://bioconductor.org/help/course-materials/2013/CSAMA2013/friday/afternoon/S4-tutorial.pdf)
-* How S4 Methods Work [@Chambers2006]
+* Hervé Pagès, [A quick overview of the S4 class system](https://bioconductor.org/packages/release/bioc/vignettes/S4Vectors/inst/doc/S4QuickOverview.pdf).  
+* Laurent Gatto, [A practical tutorial on S4 programming](https://bioconductor.org/help/course-materials/2013/CSAMA2013/friday/afternoon/S4-tutorial.pdf)  
+* How S4 Methods Work [@Chambers2006]  
 
 |   Books:
 
-* John M. Chambers. Software for Data Analysis: Programming with R. Springer, New York, 2008. ISBN-13 978-0387759357 [@Chambers2008]
-* I Robert Gentleman. R Programming for Bioinformatics. Chapman & Hall/CRC, New York, 2008. ISBN-13 978-1420063677 [@gentleman2008r]
+* John M. Chambers. Software for Data Analysis: Programming with R. Springer, New York, 2008. ISBN-13 978-0387759357 [@Chambers2008]  
+* I Robert Gentleman. R Programming for Bioinformatics. Chapman & Hall/CRC, New York, 2008. ISBN-13 978-1420063677 [@gentleman2008r]  
 
 
 
-## Reproducible reporting with Quarto {#quarto}
+## Reproducible reporting with Quarto {#sec-quarto}
 
 ### Learn Quarto
 
@@ -150,19 +157,20 @@ data science. Perform the following tasks:
 
 Being able to use Quarto in R partly relies on your previous knowledge of Rmarkdown. The following resources can help you get familiar with Rmarkdown:
 
- * [Online tutorial](https://www.markdowntutorial.com/)
- * [Cheatsheet](https://www.rstudio.com/wp-content/uploads/2015/02/rmarkdown-cheatsheet.pdf)
- * [Documentation](https://rmarkdown.rstudio.com/lesson-1.html)
- * [Dr. C Titus Brown's tutorial](https://rpubs.com/marschmi/RMarkdown)
-
+ * [Online tutorial](https://www.markdowntutorial.com/)  
+ * [Cheatsheet](https://www.rstudio.com/wp-content/uploads/2015/02/rmarkdown-cheatsheet.pdf)  
+ * [Documentation](https://rmarkdown.rstudio.com/lesson-1.html)  
+ * [Dr. C Titus Brown's tutorial](https://rpubs.com/marschmi/RMarkdown)  
 
 **Figure sources:** 
 
 **Original article**
--   Huang R _et al_. (2021) TreeSummarizedExperiment: a S4 class 
+
+- Huang R _et al_. (2021) TreeSummarizedExperiment: a S4 class 
 for data with hierarchical structure. F1000Research 9:1246. [@Huang2021]
 
 **Reference Sequence slot extension**
+
 - Lahti L _et al_. (2020) [Upgrading the R/Bioconductor ecosystem for microbiome 
 research](https://doi.org/10.7490/
 f1000research.1118447.1) F1000Research 9:1464 (slides).
